cluster/apps/dashboards/homer/homer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: dashboards
  labels:
    app: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homer
        name: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer:21.07.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: assets
          mountPath: /www/assets
        - name: test
          mountPath: /www/assets/test.yml
          subPath: test.yml
        # - name: config
        #   mountPath: /www/assets/config.yml
        #   subPath: config.yml
      volumes:
        - name: assets
          persistentVolumeClaim:
            claimName: homer-assets
        - name: test
          configMap:
            name: test.yml
            defaultMode: 0644
            items:
              - key: test.yml
                path: test.yml
        # - name: config
        #   configMap:
        #     name: config.yml
        #     items:
        #       - key: config.yml
        #         path: config.yml
