cluster/apps/dashboards/homer/homer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: dashboards
  labels:
    app: homer
spec:
  selector:
    app: homer
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  type: LoadBalancer
  loadBalancerIP: 192.168.178.130
